<resources>
    <string name="app_name">JaZa To-Do List</string>
    <string name="action_settings">Settings</string>
    <string name="todo">To-Do List</string>
    <string name="todos">To-Do Lists</string>
    <string name="action_search">Search</string>
    <string name="best">The Best To-Do List in 3SC3</string>
    <string name="button">add</string>
    <string name="input">Please input the activity</string>

    <!-- Dibawah ini untuk Navigation Drawer -->
    <string name="openDrawer">Drawer dibuka</string>
    <string name="closeDrawer">Drawer ditutup</string>
    <string name="home">Home</string>
    <string name="Note">Notes</string>
    <string name="navigation_view_item_3">Daftar</string>
    <string name="navigasi_kategori_2">Sub Item Navigasi</string>
    <string name="navigation_view_item_4">Settings</string>
    <string name="navigation_view_item_5">About</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>