<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/nav_home"
            android:checked="false"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:checked="false"
            android:icon="@drawable/ic_note"
            android:title="@string/Note" />
        <item
            android:id="@+id/nav_list"
            android:checked="false"
            android:icon="@drawable/ic_list"
            android:title="@string/todos" />


    </group>


    <item
        android:id="@+id/navigasi_kategori_2"
        android:title="@string/navigasi_kategori_2">
        <menu>
            <item
                android:id="@+id/nav_history"
                android:checked="false"
                android:icon="@drawable/ic_history_black_24dp"
                android:title="History Todo List" />
            <item
                android:id="@+id/nav_about"
                android:checked="false"
                android:icon="@drawable/ic_about"
                android:title="@string/navigation_view_item_5" />
        </menu>
    </item>

</menu>